Updated benchmark to use min and max via reduce instead of sum